tests/haste_node_precedence/haste_node_precedence.exp
Error ------------------------------------------------------------------------------------------------------ test.js:3:2

Cannot cast `foo` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   test.js:3:2
   3| (foo: string);
       ^^^

References:
   foo.js:3:18
   3| module.exports = 0;
                       ^ [1]
   test.js:3:7
   3| (foo: string);
            ^^^^^^ [2]



Found 1 error
